General arrangements in styles

--- a/src/style/SideMenu.css
+++ b/src/style/SideMenu.css
@@ -3,10 +3,12 @@
     width: 50px;
     height: 300px;
     border: 1px solid #c44800b8;  
-    right: 120px;
+    right: 130px;
     top: 30vh;
     border-radius: 70px;
-    background-color: rgba(255, 255, 255, 0.189);
+    background-color: #F4E3C3;
+    box-shadow: 0 0 0px 1.5px rgba(255, 255, 255, 0.692);
+    z-index: 200;
 }
 
 .aside-menu ul {
