--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -2,17 +2,23 @@
   position: fixed;
   display: flex;
   align-items: center;
-  left: 28vw;
-  width: calc(100vw - 28vw);
+  width: 99vw;
   height: 10vh;
+  top: 0;
+  background: linear-gradient(to right,#f6e3c1,#F0DAB2);
+
 }
 
 .main-menu {
   display: flex;
-  width: 90%;
+  width: 89.25%;
   gap: 50px;  
   justify-content: center;
   font-size: 1.07rem;
+  z-index: 200;
+  height: 100%;
+  align-items: center;
+  padding-left: 28vw;
 }
 
 .main-menu li {
