--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  top: 0;
 }
 
 .side-card {
@@ -18,6 +19,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.189);
+  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.692);
 }
 
 .side-card__content {
