--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -11,8 +11,8 @@
 }
 
 .side-card {
-  width: 85%;
-  height: 80%;
+  width: 390px;
+  height: 760px;
   border: 1px solid rgba(0, 0, 0, 0.6);
   border-radius: 70px 0px 70px 0px;
   display: flex;
