Finished about me section, and some fixes in styles

--- a/src/style/AboutMe.css
+++ b/src/style/AboutMe.css
@@ -2,10 +2,36 @@
     margin-left: 28vw;
     width: calc(100vw - 28vw);
     height: 100vh;
+    border: 1px solid red;
 }
 
 .about-me {
     width: 90%;
     height: calc(100vh - 10vh);
     padding: 10px 100px;
+}
+
+.about-me__content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    justify-content: center;
+    gap: 32px;
+}
+
+.about-me__content h2 {
+    font-size: 2.8rem;
+    max-width: 22ch;
+    color: var(--font-color);
+}
+
+.about-me__content h2 span {
+    color: #C44900;
+}
+
+.about-me__content p {
+    max-width: 48ch;
+    font-size: 1.2rem;
+    color: var(--font-color);
 }
