--- a/src/style/BookMarker.css
+++ b/src/style/BookMarker.css
@@ -6,7 +6,7 @@
     display: flex;
     padding-left: 25px;
     align-items: center;
-    background-color: #F4E3C3;
+    background-color: #f5e7ce;
     box-shadow: 0 0 0px 1.5px rgba(255, 255, 255, 0.692);
 }
 
