--- a/src/style/SideMenu.css
+++ b/src/style/SideMenu.css
@@ -6,8 +6,8 @@
     right: 120px;
     top: 30vh;
     border-radius: 70px;
-    background-color: #F4E3C3;
-    box-shadow: 0 0 0px 1.5px rgba(255, 255, 255, 0.692);
+    background-color: #f5e7ce;
+    /* box-shadow: 0 0 0px 1.5px rgba(255, 255, 255, 0.692); */
     z-index: 200;
 }
 
