--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -13,13 +13,12 @@
 .side-card {
   width: 390px;
   height: 760px;
-  border: 1px solid rgba(0, 0, 0, 0.6);
+  border: 1px solid #c4480045;
   border-radius: 70px 0px 70px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 0.189);
-  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.692);
+  background-color: rgba(255, 255, 255, 0.285);
 }
 
 .side-card__content {
@@ -59,7 +58,6 @@
   padding: 10px;
   background-image: url(https://wallpapers.com/images/hd/cool-profile-picture-1ecoo30f26bkr14o.jpg);
   background-size: cover;
-  border: 1px solid rgba(0, 0, 0, 0.6);
   border-radius: 70px 0px 70px 0px;
 }
 
