Changes in measures of some styles

--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,12 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #c448008d;
+  background: #c44800b8;
 }
 
 :root {
   --font-color: #04151fce;
+  --highlight-span: #c44800c0;
 }
 
 body {
