--- a/src/style/AboutMe.css
+++ b/src/style/AboutMe.css
@@ -1,13 +1,12 @@
 .about-me__container {
     margin-left: 28vw;
     width: calc(100vw - 28vw);
-    height: 100vh;
-    border: 1px solid red;
+    height: 70vh;
 }
 
 .about-me {
     width: 90%;
-    height: calc(100vh - 10vh);
+    height: 100%;
     padding: 10px 100px;
 }
 
@@ -27,7 +26,7 @@
 }
 
 .about-me__content h2 span {
-    color: #C44900;
+    color: var(--highlight-span);
 }
 
 .about-me__content p {
