Added skill cards

--- a/src/style/AboutMe.css
+++ b/src/style/AboutMe.css
@@ -17,6 +17,7 @@
     height: 400px;
     justify-content: center;
     gap: 32px;
+    padding-top: 45px;
 }
 
 .about-me__content h2 {
@@ -31,6 +32,7 @@
 
 .about-me__content p {
     max-width: 48ch;
+    line-height: 30px;
     font-size: 1.2rem;
     color: var(--font-color);
 }
