--- a/src/style/SkillCard.css
+++ b/src/style/SkillCard.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,700;1,400&display=swap");
 
 .skill-card__container {
   width: 280px;
@@ -14,19 +14,13 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(12.2px);
   -webkit-backdrop-filter: blur(12.2px);
-}
-
-.icon > * {
-    font-size: 12.5rem;
-  color: #61dbfb;
-  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.39));
-  margin-top: 10px;
+  gap: 20px;
 }
 
 .skill-card__container p:nth-child(2) {
-    height: 100px;
-    font-size: 1.9rem;
-    font-family: 'Josefin Sans', sans-serif;
-    color: var(--font-color);
-    letter-spacing: 3px;
+  height: 100px;
+  font-size: 1.9rem;
+  font-family: "Josefin Sans", sans-serif;
+  color: var(--font-color);
+  letter-spacing: 3px;
 }
