--- a/src/style/Skills.css
+++ b/src/style/Skills.css
@@ -1,20 +1,65 @@
 .skills__container {
-    margin-left: 28vw;
-    width: calc(100vw - 28vw);
-    height: 100vh;
-    
+  margin-left: 28vw;
+  width: calc(100vw - 28vw);
+  height: 200vh;
 }
 
 .skills-page {
-    width: 90%;
-    padding: 0 100px;
+  width: 90%;
+  padding: 0 100px;
+}
+
+.skills-page__cards p {
+  font-size: 8rem;
+  margin-top: 10px;
+}
+
+.skills-page__cards .skill-icons:hover {
+    border-radius: 16px;
+    outline: 1px solid #D2753B;
 }
 
 .skills-page__cards {
-    display: flex;
-    height: 100%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    row-gap: 20px;
-    padding: 30px 0;
+  display: flex;
+  height: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 20px;
+  padding: 50px 2px;
+}
+
+.html-icon {
+    color: rgb(241,101,41);
+}
+
+.js-icon {
+    color: rgb(233,202,49);
+}
+
+.ts-icon {
+    color: rgb(45,121,199);
+}
+
+.css-icon {
+    color: rgb(33,76,229);
+}
+
+.react-icon {
+    color: rgb(97,219,251);
+}
+
+.nest-icon {
+    color: rgb(225,30,77);
+}
+
+.github-icon {
+    color: rgb(20,25,30);
+}
+
+.git-icon {
+    color: rgb(240,80,48);
+}
+
+.sql-icon {
+    color: rgb(0,103,141);
 }
