--- a/src/style/BookMarker.css
+++ b/src/style/BookMarker.css
@@ -6,7 +6,7 @@
     display: flex;
     padding-left: 25px;
     align-items: center;
-    background-color: #f5e7ce;
+    background-color: rgba(255, 255, 255, 0.927);
 }
 
 .book-marker p:nth-child(1) {
