--- a/src/style/DownloadBtn.css
+++ b/src/style/DownloadBtn.css
@@ -1,9 +1,23 @@
-.download-button {
-    width: 280px;
-    height: 280px;
-    border: 2px solid black;
-    position: absolute;
-    border-radius: 50%;
-    right: 200px;
-    bottom: 30px;
-}
+.home-page__download button {
+    width: 300px;
+    height: 50px;
+    border: 1px solid #C44900;
+    border-radius: 70px;
+    color:#C44900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    margin-top: 30px;
+    letter-spacing: 2px;
+    background-color: rgba(255, 255, 255, 0.927);
+  }
+
+  .home-page__download button p {
+    color: black;
+  }
+
+  .home-page__download-icon {
+    font-size: 1.5rem;
+  }
