--- a/src/style/SkillCard.css
+++ b/src/style/SkillCard.css
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,400&display=swap');
 
 .skill-card__container {
   width: 280px;
-  height: 350px;
-  border-radius: 15px;
+  height: 300px;
   display: flex;
   justify-content: center;
   padding-top: 25px;
@@ -11,16 +10,15 @@
   align-items: center;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(12.2px);
   -webkit-backdrop-filter: blur(12.2px);
-  gap: 20px;
+  gap: 10px;
 }
 
 .skill-card__container p:nth-child(2) {
   height: 100px;
-  font-size: 1.9rem;
-  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.7rem;
+  font-family: 'Montserrat', sans-serif;
   color: var(--font-color);
   letter-spacing: 3px;
 }
