Added mailing service for contact form

--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -56,7 +56,7 @@
 .side-card__content__picture {
   flex-grow: 4;
   padding: 10px;
-  background-image: url(https://wallpapers.com/images/hd/cool-profile-picture-1ecoo30f26bkr14o.jpg);
+  background-image: url(https://media.revistagq.com/photos/606b3183a359af169e483dcb/1:1/w_775%2Cc_limit/estar-guapo.jpeg);
   background-size: cover;
   border-radius: 70px 0px 70px 0px;
 }
