--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,8 +1,7 @@
 .home-page__container {
   margin-left: 28vw;
-  width: calc(100vw - 28vw);
+  width: calc(100vw - 28.7vw);
   height: 100vh;
-
 }
 
 .home-page {
@@ -13,7 +12,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .home-page__svg {
@@ -63,7 +62,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 12vh;
   justify-content: space-around;
 }
 
