--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -1,62 +1,110 @@
 .contact-me__container {
-    margin-left: 28vw;
-    width: calc(100vw - 28.7vw);
+  margin-left: 28vw;
+  width: calc(100vw - 28.7vw);
 }
 
 .contact-me {
-    width: 90%;
-    height: 100%;
-    padding: 10px 100px;
+  width: 90%;
+  height: 100%;
+  padding: 10px 100px;
 }
 
 .contact-me__form {
-    display: flex;
-    flex-direction: column;
-    height: 700px;
-    justify-content: center;
-    padding: 40px 10px;
+  display: flex;
+  flex-direction: column;
+  height: 700px;
+  justify-content: center;
+  padding: 40px 10px;
+  position: relative;
 }
 
 .contact-me__form > label {
-    color: #C44900;
-    font-size: 1.15rem;
-    margin-bottom: 4px;
+  color: #c44900;
+  font-size: 1.15rem;
+  margin-bottom: 4px;
 }
 
 .contact-me__form > input {
-    width: 100%; 
-    height: 45px;
-    align-self: center;
-    padding: 10px 15px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    border: 1px solid black;
-    outline: none;
-    font-size: 0.9rem;
-    color: var(--font-color);
+  width: 100%;
+  height: 45px;
+  align-self: center;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  border: 1px solid black;
+  outline: none;
+  font-size: 0.9rem;
+  color: var(--font-color);
 }
 
 .contact-me__form textarea {
-    resize: none;
-    width: 100%;
-    height: 250px;
-    align-self: center;
-    margin-bottom: 20px;
-    border: 1px solid black;
-    outline: none; 
-    padding: 10px 15px;
-    color: var(--font-color);
-    font-size: 0.9rem;
+  resize: none;
+  width: 100%;
+  height: 250px;
+  align-self: center;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  outline: none;
+  padding: 10px 15px;
+  color: var(--font-color);
+  font-size: 0.9rem;
 }
 
 .contact-me__form button[type="submit"] {
-    width: 300px;
-    align-self: center;
-    border: none;
-    height: 50px;
-    border-radius: 70px;
-    font-size: 1.2rem;
-    letter-spacing: 3px;
-    background-color: #C44900;
-    color: white;
+  width: 300px;
+  align-self: center;
+  border: none;
+  height: 50px;
+  border-radius: 70px;
+  font-size: 1.2rem;
+  letter-spacing: 3px;
+  background-color: #c44900;
+  color: white;
+}
+
+.loader {
+  position: absolute;
+  width: 85px;
+  height: 50px;
+  bottom: -40px;
+  left: 45%;
+  justify-self: center;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#c44900 50px, transparent 0),
+    linear-gradient(#c44900 50px, transparent 0),
+    linear-gradient(#c44900 50px, transparent 0),
+    linear-gradient(#c44900 50px, transparent 0),
+    linear-gradient(#c44900 50px, transparent 0),
+    linear-gradient(#c44900 50px, transparent 0);
+  background-position: 0px center, 15px center, 30px center, 45px center,
+    60px center, 75px center, 90px center;
+  animation: rikSpikeRoll 0.65s linear infinite alternate;
+}
+@keyframes rikSpikeRoll {
+  0% {
+    background-size: 10px 3px;
+  }
+  16% {
+    background-size: 10px 50px, 10px 3px, 10px 3px, 10px 3px, 10px 3px, 10px 3px;
+  }
+  33% {
+    background-size: 10px 30px, 10px 50px, 10px 3px, 10px 3px, 10px 3px,
+      10px 3px;
+  }
+  50% {
+    background-size: 10px 10px, 10px 30px, 10px 50px, 10px 3px, 10px 3px,
+      10px 3px;
+  }
+  66% {
+    background-size: 10px 3px, 10px 10px, 10px 30px, 10px 50px, 10px 3px,
+      10px 3px;
+  }
+  83% {
+    background-size: 10px 3px, 10px 3px, 10px 10px, 10px 30px, 10px 50px,
+      10px 3px;
+  }
+  100% {
+    background-size: 10px 3px, 10px 3px, 10px 3px, 10px 10px, 10px 30px,
+      10px 50px;
+  }
 }
