--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -92,16 +92,29 @@
 
 .side-card__content__btn {
   flex-grow: 0.5;
-  border: none;
   border-radius: 70px;
   background-color: #c44800b8;
-  color: white;
-  font-size: 1.1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   cursor: pointer;
+}
+
+.side-card__content__btn:active {
+  background-color: #c37c53b8;
+}
+
+.side-card__content__btn button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  gap: 10px;
+  color: white;
+  cursor: pointer;
+  font-size: 1.1rem;
 }
 
 .side-card__content__btn-letter {
