--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -75,6 +75,19 @@ body {
   justify-content: space-between;
 }
 
+.side-card__content__info p:nth-child(1) {
+  font-size: 1.3rem;
+}
+
+.side-card__content__info p:nth-child(2) {
+  margin-top: -30px;
+  font-size: 1.2rem;
+}
+
+.side-card__content__info p:nth-child(3) {
+  font-size: 0.95rem;
+}
+
 .side-card__content__social {
   flex-grow: 0.8;
   display: flex;
@@ -125,18 +138,6 @@ body {
   font-size: 2rem;
 }
 
-.side-card__content__info p:nth-child(1) {
-  font-size: 1.3rem;
-}
-
-.side-card__content__info p:nth-child(2) {
-  margin-top: -30px;
-  font-size: 1.2rem;
-}
-
-.side-card__content__info p:nth-child(3) {
-  font-size: 0.95rem;
-}
 
 
 @media (max-width: 1300px) {
@@ -153,5 +154,32 @@ body {
   .side-card__content {
     width: 85%;
     height: 90%;
+  }
+
+  .side-card__content__header {
+    padding: 0 10px;
+  }
+
+  .side-card__content__picture {
+    flex-grow: 5;
+    border-radius: 45px 0px 45px 0px;
+  }
+
+  .side-card__content__info {
+    padding: 1.5rem 0 0 0;
+  }
+
+  .side-card__content__info p:nth-child(2) {
+    margin-top: -1.5rem;
+  }
+
+  .side-card__content__social {
+    padding: 0.5rem;
+    gap: 0.7rem;
+  }
+
+  .side-card__content__social p {
+    border: 0.15rem solid #04151fcf;
+    padding: 0.7rem;
   }
 }
