responsive Home page max-width: 1300px

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,6 +1,6 @@
 .home-page__container {
   margin-left: 28vw;
-  width: calc(100vw - 28.7vw);
+  width: calc(100vw - 29vw);
   height: 100vh;
 }
 
@@ -42,6 +42,13 @@
   letter-spacing: 5px;
 }
 
+.home-page__personal-info__container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
 .home-page__personal-info p {
   margin-top: 20px; 
   color: #04151fa7;
@@ -50,18 +57,52 @@
   letter-spacing: 2px;
 }
 
-.home-page__personal-info__container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
-}
-
 .home-page__download {
   color: #04151f9b;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
+
+@media (max-width: 1300px) {
+  html {
+    font-size: 11px;
+  }
+
+  .home-page {
+    width: 90%;
+    padding: 10px 3rem 15vh 3rem;
+  }
+
+  .home-page__svg {
+    width: 25rem;
+    top: -6rem;
+    right: -11rem;
+  }
+
+  .home-page__personal-info {
+    margin-top: 1rem;
+    width: 35vw;
+  }
+
+  .home-page__personal-info h1 {
+    letter-spacing: 0.2rem;
+    line-height: 4.3rem;
+  }
+
+  .home-page__personal-info h1 span {
+    letter-spacing: 0;
+  }
+
+  .home-page__personal-info p {
+    margin-top: 1.5rem; 
+    width: 100%;
+    letter-spacing: 0.2rem;
+  }
+
+  .home-page__download {
+    font-size: 0.9rem;
+  }
 }
 
