responsive to max-width:1300px screen

--- a/src/style/BookMarker.css
+++ b/src/style/BookMarker.css
@@ -1,26 +1,43 @@
 .book-marker {
-    width: 180px;
-    height: 50px;
-    border-radius: 70px;
-    border: 1px solid black;
-    display: flex;
-    padding-left: 25px;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.927);
+  width: 180px;
+  height: 50px;
+  border-radius: 70px;
+  border: 1px solid black;
+  display: flex;
+  padding-left: 25px;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.927);
 }
 
 .book-marker p:nth-child(1) {
+  font-size: 1.3rem;
+  display: flex;
+  color: #c44800;
+  flex-grow: 0;
+  margin-right: -25px;
+}
+
+.book-marker p:nth-child(2) {
+  letter-spacing: 3px;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  font-size: 0.9rem;
+}
+
+@media (max-width: 1300px) {
+  .book-marker {
+    width: 11rem;
+    height: 3.02rem;
+    border-radius: 3rem;
+    padding-left: 1.45rem;
+  }
+
+  .book-marker p:nth-child(1) {
     font-size: 1.3rem;
     display: flex;
     color: #c44800;
     flex-grow: 0;
-    margin-right: -25px;
-}
-
-.book-marker p:nth-child(2) {
-    letter-spacing: 3px;
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    font-size: 0.9rem;
+    margin-right: -1.4rem;
+  }
 }
