--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -6,10 +6,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding-right: 20px; */
 }
 
 .footer__container p {
     color: rgba(255, 255, 255, 0.671);
     font-size: 0.8rem;
+}
+
+@media (max-width: 1300px) {
+    .footer__container {
+        margin-top: 0;
+        width: 99.4vw;
+        height: 2rem;
+        background-color: #04151fe1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
