--- a/src/style/AboutMe.css
+++ b/src/style/AboutMe.css
@@ -1,38 +1,57 @@
 .about-me__container {
-    margin-left: 28vw;
-    width: calc(100vw - 28.7vw);
-    height: 70vh;
+  margin-left: 28vw;
+  width: calc(100vw - 29vw);
+  height: 70vh;
 }
 
 .about-me {
-    width: 90%;
-    height: 100%;
-    padding: 10vh 100px 0 100px;
+  width: 90%;
+  height: 100%;
+  padding: 10vh 100px 0 100px;
 }
 
 .about-me__content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 400px;
-    justify-content: center;
-    gap: 32px;
-    padding-top: 45px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  gap: 32px;
+  padding-top: 45px;
 }
 
 .about-me__content h2 {
-    font-size: 2.8rem;
-    max-width: 22ch;
-    color: var(--font-color);
+  font-size: 2.8rem;
+  max-width: 22ch;
+  color: var(--font-color);
 }
 
 .about-me__content h2 span {
-    color: var(--highlight-span);
+  color: var(--highlight-span);
 }
 
 .about-me__content p {
+  max-width: 48ch;
+  line-height: 30px;
+  font-size: 1.2rem;
+  color: var(--font-color);
+}
+
+@media (max-width: 1300px) {
+  html {
+    font-size: 11px;
+  }
+
+  .about-me {
+    padding: 10vh 3rem 0 3rem;
+  }
+
+  .about-me__content {
+    gap: 1.5rem;
+    padding-top: 2.3rem;
+  }
+
+  .about-me__content p {
     max-width: 48ch;
-    line-height: 30px;
-    font-size: 1.2rem;
-    color: var(--font-color);
+    line-height: 2.25rem;
+  }
 }
