--- a/src/style/SkillCard.css
+++ b/src/style/SkillCard.css
@@ -22,3 +22,15 @@
   color: var(--font-color);
   letter-spacing: 3px;
 }
+
+@media (max-width: 1300px) {
+  .skill-card__container {
+    width: 17rem;
+    height: 18rem;
+    padding-top: 4rem;
+    border-radius: 1rem;
+    backdrop-filter: blur(12.2px);
+    -webkit-backdrop-filter: blur(12.2px);
+    gap: 10px;
+  }
+}
