--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -22,6 +22,7 @@
   color: #c44900;
   font-size: 1.15rem;
   margin-bottom: 4px;
+  height: 2rem;
 }
 
 .contact-me__form > input {
@@ -60,6 +61,7 @@
   letter-spacing: 3px;
   background-color: #c44900;
   color: white;
+  margin-bottom: 2rem;
 }
 
 .contact-me__form button[type="submit"]:active {
@@ -70,7 +72,7 @@
   position: absolute;
   width: 85px;
   height: 50px;
-  bottom: -40px;
+  bottom: 0;
   left: 45%;
   justify-self: center;
   background-repeat: no-repeat;
