--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -106,3 +106,25 @@
   }
 }
 
+@media (max-width: 815px) {
+  .home-page__container {
+    margin-left: 0;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 5rem;
+  }
+
+  .home-page {
+    width: 90%;
+    height: 100%;
+    top: 0;
+    padding: 0 2rem 7rem 2rem;
+  }
+
+  .home-page__personal-info {
+    margin-top: 4rem;
+    width: 50rem;
+  }
+}
