--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -116,6 +116,8 @@
   }
 }
 
+/* Media querys */
+
 @media (max-width: 1440px) {
   .contact-me__form button[type="submit"] {
     margin-bottom: 0rem;
@@ -136,7 +138,17 @@
     justify-content: center;
     padding: 4rem 10px;
     position: relative;
-    
+  }
+}
+
+@media (max-width: 1366px) {
+  .contact-me {
+    padding: 6rem 100px;
+  }
+
+  .contact-me__form {
+    height: 80vh;
+    padding: 4rem 10px;
   }
 }
 
@@ -160,7 +172,7 @@
     height: 2.5rem;
     margin-bottom: -0.8rem;
   }
-  
+
   .contact-me__form > input {
     height: 3rem;
     padding: 0.5rem 0.8rem;
