--- a/src/style/BookMarker.css
+++ b/src/style/BookMarker.css
@@ -41,3 +41,24 @@
     margin-right: -1.4rem;
   }
 }
+
+@media (max-width: 720px) {
+  .book-marker {
+    width: 22rem;
+    height: 6rem;
+    padding-left: 4rem;
+  }
+
+  .book-marker p:nth-child(1) {
+    font-size: 2.5rem;
+    margin-right: -2rem;
+  }
+
+  .book-marker p:nth-child(2) {
+    letter-spacing: 3px;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    font-size: 1.7rem;
+  }
+}
