--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,6 +1,5 @@
 .footer__container {
-    margin-top: 50px;
-    width: 99.4vw;
+    width: 100%;
     height: 40px;
     background-color: #04151fe1;
     display: flex;
