--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,6 +1,6 @@
 .home-page__container {
   margin-left: 28vw;
-  width: calc(100vw - 29vw);
+  width: calc(100vw - 30vw);
   height: 100vh;
 }
 
@@ -24,6 +24,13 @@
   opacity: 0.6;
 }
 
+.home-page__personal-info__container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
 .home-page__personal-info {
   margin-top: 45px;
   width: 600px;
@@ -42,15 +49,8 @@
   letter-spacing: 5px;
 }
 
-.home-page__personal-info__container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
-}
-
 .home-page__personal-info p {
-  margin-top: 20px; 
+  margin-top: 20px;
   color: #04151fa7;
   font-size: 1.25rem;
   width: 450px;
@@ -96,7 +96,7 @@
   }
 
   .home-page__personal-info p {
-    margin-top: 1.5rem; 
+    margin-top: 1.5rem;
     width: 100%;
     letter-spacing: 0.2rem;
   }
@@ -106,7 +106,7 @@
   }
 }
 
-@media (max-width: 815px) {
+@media (max-width: 720px) {
   .home-page__container {
     margin-left: 0;
     width: 100vw;
@@ -124,7 +124,29 @@
   }
 
   .home-page__personal-info {
-    margin-top: 4rem;
+    margin-top: 6rem;
     width: 50rem;
+  }
+
+  .home-page__personal-info h1 {
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+
+  .home-page__personal-info p {
+    margin-top: 2.8rem;
+    color: #04151fa4;
+    font-size: 3rem;
+  }
+
+  .home-page__download {
+    color: #04151f9b;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1.7rem;
+    height: 20rem;
+    padding-bottom: 5rem;
   }
 }
