--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,14 +1,13 @@
 .home-page__container {
   margin-left: 28vw;
-  width: calc(100vw - 30vw);
-  height: 100vh;
+  width: calc(100% - 28vw);
+  padding-top: 5rem;
 }
 
 .home-page {
-  width: 90%;
-  height: calc(100vh - 10vh);
-  top: 10vh;
-  padding: 10px 100px 15vh 100px;
+  max-width: 90%;
+  min-height: calc(100vh - 5rem);
+  padding: 0.625rem 8% 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -16,45 +15,46 @@
 }
 
 .home-page__svg {
-  width: 350px;
+  width: 21.875rem;
   position: absolute;
-  top: -50px;
-  right: -150px;
+  top: -3.125rem;
+  right: -9.375rem;
   z-index: 1;
-  opacity: 0.6;
+  opacity: 0.5;
 }
 
 .home-page__personal-info__container {
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: space-between;
+  height: 83%;
+  position: absolute;
 }
 
 .home-page__personal-info {
-  margin-top: 45px;
-  width: 600px;
+  margin-top: 5rem;
+  width: 100%;
 }
 
 .home-page__personal-info h1 {
   font-size: 4.2rem;
   color: #04151fcc;
-  letter-spacing: 3px;
-  line-height: 70px;
-  overflow: hidden;
+  letter-spacing: 0.1875rem;
+  line-height: 4.375rem;
+  max-width: 67%;
 }
 
 .home-page__personal-info h1 span {
   color: var(--highlight-span);
-  letter-spacing: 5px;
+  letter-spacing: 0.3125rem;
 }
 
 .home-page__personal-info p {
-  margin-top: 20px;
+  margin-top: 2.5rem;
   color: #04151fa7;
   font-size: 1.25rem;
-  width: 450px;
-  letter-spacing: 2px;
+  max-width: 28.125rem;
+  letter-spacing: 0.125rem;
 }
 
 .home-page__download {
@@ -63,90 +63,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  padding-right: 8%;
 }
 
-@media (max-width: 1300px) {
-  html {
-    font-size: 11px;
-  }
-
-  .home-page {
-    width: 90%;
-    padding: 10px 3rem 15vh 3rem;
-  }
-
-  .home-page__svg {
-    width: 25rem;
-    top: -6rem;
-    right: -11rem;
-  }
-
-  .home-page__personal-info {
-    margin-top: 2.3rem;
-    width: 32vw;
-  }
-
-  .home-page__personal-info h1 {
-    letter-spacing: 0.2rem;
-    line-height: 4.3rem;
-  }
-
-  .home-page__personal-info h1 span {
-    letter-spacing: 0;
-  }
-
-  .home-page__personal-info p {
-    margin-top: 1.5rem;
-    width: 100%;
-    letter-spacing: 0.2rem;
-  }
-
-  .home-page__download {
-    font-size: 0.9rem;
-  }
-}
-
-@media (max-width: 720px) {
+@media screen and (max-width: 1030px) {
   .home-page__container {
     margin-left: 0;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
     padding-top: 5rem;
   }
 
   .home-page {
-    width: 90%;
-    height: 100%;
-    top: 0;
-    padding: 0 2rem 7rem 2rem;
-  }
-
-  .home-page__personal-info {
-    margin-top: 6rem;
-    width: 50rem;
-  }
-
-  .home-page__personal-info h1 {
-    font-size: 5rem;
-    line-height: 6rem;
-  }
-
-  .home-page__personal-info p {
-    margin-top: 2.8rem;
-    color: #04151fa4;
-    font-size: 3rem;
-  }
-
-  .home-page__download {
-    color: #04151f9b;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 1.7rem;
-    height: 20rem;
-    padding-bottom: 5rem;
+    margin: 0 auto;
   }
 }
