--- a/src/style/SideCard.css
+++ b/src/style/SideCard.css
@@ -2,23 +2,23 @@
 
 .side-card__container {
   width: 28vw;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   display: flex;
-  justify-content: center;
   align-items: center;
   top: 0;
 }
 
 .side-card {
-  width: 390px;
-  height: 760px;
+  min-width: 24.375rem;
+  height: 47.5rem;
   border: 1px solid #c4480045;
-  border-radius: 70px 0px 70px 0px;
+  border-radius: 4.375rem 0px 4.375rem 0px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.285);
+  margin: 0 5%;
 }
 
 .side-card__content {
@@ -32,14 +32,14 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 0 20px;
+  padding: 0 1.25rem;
   flex-grow: 0.2;
 }
 
 .side-card__content__header p:first-child {
   font-size: 2.8rem;
   font-family: "Kaushan Script", cursive;
-  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.482);
+  text-shadow: .1875rem .1875rem 1px rgba(0, 0, 0, 0.482);
   display: flex;
   align-items: center;
   color: #c44800b8;
@@ -57,10 +57,10 @@
 
 .side-card__content__picture {
   flex-grow: 4;
-  padding: 10px;
+  padding: .625rem;
   background-image: url("../assets/tt.jpg");
   background-size: cover;
-  border-radius: 70px 0px 70px 0px;
+  border-radius: 4.375rem 0px 4.375rem 0px;
 }
 
 .side-card__content__info {
@@ -68,7 +68,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 0 0 0;
+  padding: 1.875rem 0 0 0;
   justify-content: space-between;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .side-card__content__info p:nth-child(2) {
-  margin-top: -30px;
+  margin-top: -1.875rem;
   font-size: 1.2rem;
 }
 
@@ -90,14 +90,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: .625rem;
 }
 
 .side-card__content__social p {
   font-size: 1.3rem;
   border: 2px solid #04151fcf;
   color: #04151fcf;
-  padding: 13px;
+  padding: .8125rem;
   display: flex;
   align-items: center;
   border-radius: 50%;
@@ -106,7 +106,7 @@
 
 .side-card__content__btn {
   flex-grow: 0.5;
-  border-radius: 70px;
+  border-radius: 4.375rem;
   background-color: #c44800b8;
   display: flex;
   justify-content: center;
@@ -125,7 +125,7 @@
   align-items: center;
   background-color: transparent;
   border: none;
-  gap: 10px;
+  gap: .625rem;
   color: white;
   cursor: pointer;
   font-size: 1.1rem;
@@ -137,152 +137,12 @@
 
 /* Media querys */
 
-@media (max-width: 1440px) {
-  .side-card {
-    height: 44rem;
-  }
-}
-
-@media (max-width: 1366px) {
-  html {
-    font-size: 14.5px;
-  }
-
-  .side-card {
-    width: 340px;
-    height: 610px;
-    border-radius: 3rem 0px 3rem 0px;
-  }
-
-  .side-card__content__picture {
-    flex-grow: 5;
-    border-radius: 3rem 0px 3rem 0px;
-  }
-
-  .side-card__content__info {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem 0 0 0;
-    justify-content: space-between;
-  }
-
-  .side-card__content__info p:nth-child(2) {
-    margin-top: -1.5rem;
-    font-size: 1.2rem;
-  }
-}
-
-@media (max-width: 1300px) {
-  html {
-    font-size: 11px;
-  }
-
-  .side-card {
-    width: 23rem;
-    height: 44rem;
-    border-radius: 45px 0px 45px 0px;
-  }
-
-  .side-card__content {
-    width: 85%;
-    height: 90%;
-  }
-
-  .side-card__content__header {
-    padding: 0 10px;
-  }
-
-  .side-card__content__header p:first-child {
-    padding-right: 1rem;
-  }
-
-  .side-card__content__picture {
-    flex-grow: 5;
-    border-radius: 45px 0px 45px 0px;
-  }
-
-  .side-card__content__info {
-    padding: 1.5rem 0 0 0;
-  }
-
-  .side-card__content__info p:nth-child(2) {
-    margin-top: -1.2rem;
-  }
-
-  .side-card__content__social {
-    padding: 0.5rem;
-    gap: 0.7rem;
-  }
-
-  .side-card__content__social p {
-    border: 0.15rem solid #04151fcf;
-    padding: 0.7rem;
-  }
-}
-
-@media (max-width: 720px) {
-  html {
-    font-size: 16px;
-  }
-
+@media screen and (max-width: 1030px) {
   .side-card__container {
-    width: 100vw;
-    position: static;
-    align-items: center;
-  }
-
-  .side-card {
-    width: 43rem;
-    height: 80rem;
-    border-radius: 6rem 0px 6rem 0px;
-  }
-
-  .side-card__content__header p:first-child {
-    font-size: 5rem;
-  }
-
-  .side-card__content__header p:nth-child(2) {
-    font-size: 1.8rem;
-  }
-
-  .side-card__content__info p:nth-child(1) {
-    font-size: 2.3rem;
-  }
-
-  .side-card__content__info p:nth-child(2) {
-    font-size: 2.2rem;
-    margin-top: -2.6rem;
-  }
-
-  .side-card__content__info p:nth-child(3) {
-    font-size: 1.8rem;
-  }
-
-  .side-card__content__social {
-    gap: 10px;
-  }
-
-  .side-card__content__social p {
-    font-size: 2.6rem;
-    padding: 1.5rem;
-  }
-
-  .side-card__content__btn button {
     width: 100%;
-    display: flex;
+    min-height: 100vh;
+    position: static;
+    padding: 10% 0;
     justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    gap: 10px;
-    color: white;
-    cursor: pointer;
-    font-size: 2rem;
-  }
-
-  .side-card__content__btn-letter {
-    font-size: 3.5rem;
   }
 }
