--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -1,37 +1,37 @@
 .contact-me__container {
   margin-left: 28vw;
-  width: calc(100vw - 30vw);
+  width: calc(100% - 28vw);
 }
 
 .contact-me {
-  width: 90%;
-  height: 100%;
-  padding: 6rem 100px;
+  max-width: 90%;
+  min-height: calc(100vh);
+  padding: 5rem 8% 0;
 }
 
 .contact-me__form {
   display: flex;
   flex-direction: column;
-  height: 700px;
+  height: 43.75rem;
   justify-content: center;
-  padding: 40px 10px;
+  padding: 2.5rem 0.625rem;
   position: relative;
 }
 
 .contact-me__form > label {
   color: #c44900;
   font-size: 1.15rem;
-  margin-bottom: 4px;
+  margin-bottom: 0.25rem;
   height: 2rem;
 }
 
 .contact-me__form > input {
   width: 100%;
-  height: 45px;
+  height: 2.8125rem;
   align-self: center;
-  padding: 10px 15px;
-  margin-bottom: 20px;
-  border-radius: 10px;
+  padding: 0.625rem 0.9375rem;
+  margin-bottom: 1.25rem;
+  border-radius: 0.625rem;
   border: 1px solid black;
   outline: none;
   font-size: 0.9rem;
@@ -41,24 +41,24 @@
 .contact-me__form textarea {
   resize: none;
   width: 100%;
-  height: 250px;
+  height: 15.625rem;
   align-self: center;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   border: 1px solid black;
   outline: none;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   color: var(--font-color);
   font-size: 0.9rem;
 }
 
 .contact-me__form button[type="submit"] {
-  width: 300px;
+  width: 18.75rem;
   align-self: center;
   border: none;
-  height: 50px;
-  border-radius: 70px;
+  height: 3.125rem;
+  border-radius: 4.375rem;
   font-size: 1.2rem;
-  letter-spacing: 3px;
+  letter-spacing: 0.1875rem;
   background-color: #c44900;
   color: white;
   margin-bottom: 2rem;
@@ -118,88 +118,13 @@
 
 /* Media querys */
 
-@media (max-width: 1440px) {
-  .contact-me__form button[type="submit"] {
-    margin-bottom: 0rem;
-  }
-
+@media screen and (max-width: 1030px) {
   .contact-me__container {
-    height: 115vh;
-  }
-  .contact-me {
-    width: 90%;
-    height: 100%;
-    padding: 6rem 100px;
-  }
-  .contact-me__form {
-    display: flex;
-    flex-direction: column;
-    height: 700px;
-    justify-content: center;
-    padding: 4rem 10px;
-    position: relative;
-  }
-}
-
-@media (max-width: 1366px) {
-  .contact-me {
-    padding: 6rem 100px;
-  }
-
-  .contact-me__form {
-    height: 80vh;
-    padding: 4rem 10px;
-  }
-}
-
-@media (max-width: 1300px) {
-  html {
-    font-size: 11px;
+    margin-left: 0;
+    width: 100%;
   }
 
   .contact-me {
-    padding: 10vh 3rem 0 3rem;
-  }
-
-  .contact-me__form {
-    height: 80vh;
-    padding: 0 3rem 0 0;
-    margin-top: 0rem;
-  }
-
-  .contact-me__form > label {
-    font-size: 1.15rem;
-    height: 2.5rem;
-    margin-bottom: -0.8rem;
-  }
-
-  .contact-me__form > input {
-    height: 3rem;
-    padding: 0.5rem 0.8rem;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-    font-size: 1rem;
-  }
-
-  .contact-me__form textarea {
-    height: 15rem;
-    margin-bottom: 1rem;
-    padding: 0.5rem 0.8rem;
-    font-size: 1rem;
-  }
-
-  .contact-me__form button[type="submit"] {
-    width: 14rem;
-    height: 3rem;
-    border-radius: 3rem;
-    font-size: 1rem;
-    letter-spacing: 0.2rem;
-  }
-
-  .loader {
-    bottom: 3.3rem;
-    left: 60%;
-    width: 70px;
-    height: 35px;
+    margin: 0 auto;
   }
 }
