--- a/src/style/SkillCard.css
+++ b/src/style/SkillCard.css
@@ -1,50 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;1,100;1,400&display=swap");
 
 .skill-card__container {
-  width: 280px;
-  height: 300px;
+  width: 17.5rem;
+  height: 18.75rem;
   display: flex;
   justify-content: center;
-  padding-top: 25px;
+  padding-top: 1.5625rem;
   flex-direction: column;
   align-items: center;
   background: rgba(255, 255, 255, 0.3);
-  border-radius: 16px;
+  border-radius: 1rem;
   backdrop-filter: blur(12.2px);
   -webkit-backdrop-filter: blur(12.2px);
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 .skill-card__container p:nth-child(2) {
-  height: 100px;
+  height: 6.25rem;
   font-size: 1.7rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: var(--font-color);
-  letter-spacing: 3px;
+  letter-spacing: 0.1875rem;
 }
 
-@media (max-width: 1440px) {
+/* Media queries */
+
+@media screen and (max-width: 1660px) {
   .skill-card__container {
-    width: 230px;
-    height: 250px;
-    padding-top: 45px;
+    width: 16rem;
+    height: 16rem;
   }
 }
 
-@media (max-width: 1366px) {
+@media screen and (max-width: 1490px) {
+  html {
+    font-size: 90%;
+  }
+
   .skill-card__container {
-    width: 210px;
-    height: 240px;
-    padding-top: 3rem;
-    border-radius: 1rem;
+    width: 14.5rem;
+    height: 14.5rem;
   }
 }
 
-@media (max-width: 1300px) {
+@media screen and (max-width: 1360px) {
   .skill-card__container {
-    width: 17rem;
-    height: 18rem;
-    padding-top: 4rem;
-    border-radius: 1rem;
+    width: 100%;
+  }
+
+  .skill-card__container {
+    display: flex;
+    padding-top: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    padding-left: 28%;
+    gap: 1.875rem;
+  }
+
+  .skill-card__container p:nth-child(2) {
+    font-size: 1.7rem;
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  html {
+    font-size: 80%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  html {
+    font-size: 70%;
   }
 }
